[project]
name = "hy-mt2-evaluation"
version = "0.1.0"
description = "Evaluate the impact of different K&V quantizations on the HY-MT2 models."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "llama-cpp-python>=0.3.23",
    "sacrebleu[ja]>=2.6.0",
    "tqdm>=4.67.3",
    "types-tqdm>=4.67.3.20260518",
]

[dependency-groups]
dev = ["ipykernel>=7.2.0", "ipython>=9.14.0", "ipywidgets>=8.1.8"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "llama-cpp-python-cu124"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu124"
explicit = true

[tool.uv.sources]
llama-cpp-python = { index = "llama-cpp-python-cu124" }

[[tool.mypy.overrides]]
module = "datasets"
ignore_missing_imports = true
